Refactor code and handle parameter translate

--- a/languages/en/demo.json
+++ b/languages/en/demo.json
@@ -1,4 +1,5 @@
 {
     "hello":"Hello",
-    "current":"Current Language"
+    "current":"Current Language: {language}",
+    "locale": "English"
 }
